# ahrs-fusion

./: Cargo.toml  LICENSE  README.md  build.rs  pyproject.toml
ahrs/: Adafruit_AHRS_NXPFusion.cpp  Adafruit_AHRS_NXPFusion.h  main.c  nxp.cpp  nxp.hpp  nxp_impl.hpp  nxp_matrix.cpp  wrapper.c  wrapper.cpp  wrapper.h
python/: Cargo.toml  pyproject.toml
python/src/: lib.rs
src/: lib.rs  nxp.rs
tests/: test_nxp.py
