[build-system]
requires = ["maturin>=0.12,<0.15"]
build-backend = "maturin"

[project]
name = "ahrs-fursion"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


